--- a/CryptoPortfolio/app/src/main/res/layout/fragment_bittrex.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/fragment_bittrex.xml
@@ -5,16 +5,18 @@
     android:layout_height="match_parent"
     tools:context="com.crypto.portfolio.cryptoportfolio.TabbedFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/bittrexRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Please add bittrex account"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="25sp" />
-
-
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Please add bittrex account"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="25sp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addBittrexKey"
