--- a/CryptoPortfolio/app/src/main/res/layout/fragment_tabbed.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/fragment_tabbed.xml
@@ -2,10 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="100dp"
     tools:context="com.crypto.portfolio.cryptoportfolio.TabbedFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-
     <view
         android:id="@+id/pager"
         class="android.support.v4.view.ViewPager"
