--- a/CryptoPortfolio/app/src/main/res/layout/app_bar_main.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/app_bar_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.crypto.portfolio.cryptoportfolio.MainActivity">
+    tools:context="com.crypto.portfolio.cryptoportfolio.activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
+        app:elevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -21,4 +22,5 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
+
 </android.support.design.widget.CoordinatorLayout>
