--- a/CryptoPortfolio/app/src/main/res/layout/fragment_binance.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/fragment_binance.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.crypto.portfolio.cryptoportfolio.TabbedFragment">
+    tools:context="com.crypto.portfolio.cryptoportfolio.fragment.TabbedFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/binanceRefresh"
