--- a/CryptoPortfolio/app/src/main/res/layout/fragment_tabbed.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/fragment_tabbed.xml
@@ -1,13 +1,24 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="100dp"
-    tools:context="com.crypto.portfolio.cryptoportfolio.TabbedFragment">
-    <view
-        android:id="@+id/pager"
-        class="android.support.v4.view.ViewPager"
-        id="@+id/view"
-        android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.crypto.portfolio.cryptoportfolio.fragment.TabbedFragment">
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        app:tabTextColor="@android:color/white"
+        app:tabSelectedTextColor="@android:color/white"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</FrameLayout>
+
+    <android.support.v4.view.ViewPager
+        android:layout_below="@id/tabLayout"
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+    </android.support.v4.view.ViewPager>
+</RelativeLayout>
