--- a/CryptoPortfolio/app/src/main/res/layout/fragment_bittrex.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/fragment_bittrex.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/bittrexBackgroundText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Please add bittrex account"
