added welcome screen

--- a/CryptoPortfolio/app/src/main/res/values/styles.xml
+++ b/CryptoPortfolio/app/src/main/res/values/styles.xml
@@ -17,4 +17,6 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.NoActionBarStyle" parent="Theme.AppCompat.Light.NoActionBar"/>
+
 </resources>
