--- a/CryptoPortfolio/app/src/main/res/layout/fragment_bittrex.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/fragment_bittrex.xml
@@ -21,5 +21,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+        app:srcCompat="@drawable/ic_add" />
 </FrameLayout>
