--- a/CryptoPortfolio/app/src/main/res/layout/openorder_linearlayout.xml
+++ b/CryptoPortfolio/app/src/main/res/layout/openorder_linearlayout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border"
+    android:background="@drawable/style_border"
     android:layout_marginBottom="5dp"
     android:orientation="vertical">
 
