--- a/CryptoPortfolio/app/src/main/res/xml/pref_screen_fragment.xml
+++ b/CryptoPortfolio/app/src/main/res/xml/pref_screen_fragment.xml
@@ -24,51 +24,51 @@
             android:defaultValue="false"
             android:key="pref_bittrex_show_market"
             android:title="Show Market"/>
-        <PreferenceScreen
-            android:title="Manage Bittrex Key">
-            <EditTextPreference
-                android:title="Bittrex Key"
-                android:summary="read only"
-                android:password="true"
-                android:defaultValue="Admin"
-                android:dialogTitle="Bittrex Key" />
-            <EditTextPreference
-                android:key="mse_password"
-                android:title="Bittrex Secret"
-                android:password="true"
-                android:summary="read only"
-                android:dialogTitle="Bittrex Secret" />
-        </PreferenceScreen>
+        <!--<PreferenceScreen-->
+            <!--android:title="Manage Bittrex Key">-->
+            <!--<EditTextPreference-->
+                <!--android:title="Bittrex Key"-->
+                <!--android:summary="read only"-->
+                <!--android:password="true"-->
+                <!--android:defaultValue="Admin"-->
+                <!--android:dialogTitle="Bittrex Key" />-->
+            <!--<EditTextPreference-->
+                <!--android:key="mse_password"-->
+                <!--android:title="Bittrex Secret"-->
+                <!--android:password="true"-->
+                <!--android:summary="read only"-->
+                <!--android:dialogTitle="Bittrex Secret" />-->
+        <!--</PreferenceScreen>-->
     </PreferenceCategory>
-    <PreferenceCategory
-        android:title="Binance Settings"
-        android:key="pref_binance_storage_settings">
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="pref_binance_show_holdings"
-            android:title="Show Account Balance"/>
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="pref_binance_show_open_orders"
-            android:title="Show Open Orders" />
-        <SwitchPreference
-            android:defaultValue="false"
-            android:key="pref_binance_show_market"
-            android:title="Show Market"/>
-        <PreferenceScreen
-            android:title="Manage Binance Key">
-            <EditTextPreference
-                android:title="Binance Key"
-                android:summary="read only"
-                android:password="true"
-                android:defaultValue="Admin"
-                android:dialogTitle="Binance Key" />
-            <EditTextPreference
-                android:key="mse_password"
-                android:title="Binance Secret"
-                android:password="true"
-                android:summary="read only"
-                android:dialogTitle="Binance Secret" />
-        </PreferenceScreen>
-    </PreferenceCategory>
+    <!--<PreferenceCategory-->
+        <!--android:title="Binance Settings"-->
+        <!--android:key="pref_binance_storage_settings">-->
+        <!--<SwitchPreference-->
+            <!--android:defaultValue="true"-->
+            <!--android:key="pref_binance_show_holdings"-->
+            <!--android:title="Show Account Balance"/>-->
+        <!--<SwitchPreference-->
+            <!--android:defaultValue="true"-->
+            <!--android:key="pref_binance_show_open_orders"-->
+            <!--android:title="Show Open Orders" />-->
+        <!--<SwitchPreference-->
+            <!--android:defaultValue="false"-->
+            <!--android:key="pref_binance_show_market"-->
+            <!--android:title="Show Market"/>-->
+        <!--<PreferenceScreen-->
+            <!--android:title="Manage Binance Key">-->
+            <!--<EditTextPreference-->
+                <!--android:title="Binance Key"-->
+                <!--android:summary="read only"-->
+                <!--android:password="true"-->
+                <!--android:defaultValue="Admin"-->
+                <!--android:dialogTitle="Binance Key" />-->
+            <!--<EditTextPreference-->
+                <!--android:key="mse_password"-->
+                <!--android:title="Binance Secret"-->
+                <!--android:password="true"-->
+                <!--android:summary="read only"-->
+                <!--android:dialogTitle="Binance Secret" />-->
+        <!--</PreferenceScreen>-->
+    <!--</PreferenceCategory>-->
 </PreferenceScreen>
