--- a/CryptoPortfolio/app/src/main/res/xml/pref_screen_fragment.xml
+++ b/CryptoPortfolio/app/src/main/res/xml/pref_screen_fragment.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:title="General Settings"
-        android:key="pref_general_storage_settings">
+        android:title="General Settings">
         <SwitchPreference
             android:defaultValue="false"
-            android:key="pref_general_hide_appbar"
+            android:key="@string/pref_general_hide_appbar"
             android:title="Hide App Bar"
             android:summary="for maximum visibilty (recommended)" />
     </PreferenceCategory>
@@ -14,18 +13,14 @@
         android:key="pref_bittrex_storage_settings">
         <SwitchPreference
             android:defaultValue="true"
-            android:key="pref_bittrex_show_holdings"
+            android:key="@string/pref_bittrex_show_holdings"
             android:title="Show Account Balance"/>
         <SwitchPreference
             android:defaultValue="true"
-            android:key="pref_bittrex_show_open_orders"
+            android:key="@string/pref_bittrex_show_open_orders"
             android:title="Show Open Orders" />
-        <!--<SwitchPreference-->
-            <!--android:defaultValue="false"-->
-            <!--android:key="pref_bittrex_show_market"-->
-            <!--android:title="Show Market"/>-->
         <Preference
-            android:key="bittrex_setting_preference"
+            android:key="@string/bittrex_setting_preference"
             android:title="Manage Bittrex Credentials"/>
     </PreferenceCategory>
 </PreferenceScreen>
